# hot_reload_opengl

./: .clang-format  .gitignore  CMakeLists.txt  README.md  bootstrap.py  init_dev.sh  platform.h  win_main.cpp
application/: CMakeLists.txt
application/src/: application.cpp  application.h  asset_import.cpp  assets.h  camera.h  gl_shader.cpp  gl_shader.h  logger.h  memory.cpp  memory.h
assets/meshes/: asset_Cube.fbx  asset_Sphere.fbx  asset_Suzanne.fbx
assets/meshes/dungeon.fbx_Barrel/: dungeon.fbx_Barrel.fbx
assets/meshes/dungeon.fbx_Collection/: dungeon.fbx_Collection.fbx
assets/meshes/dungeon.fbx_Crate/: dungeon.fbx_Crate.fbx
assets/meshes/dungeon.fbx_Doorway/: dungeon.fbx_Doorway.fbx
assets/meshes/dungeon.fbx_Floors/: dungeon.fbx_Floors.fbx
assets/meshes/dungeon.fbx_Pillar1/: dungeon.fbx_Pillar1.fbx
assets/meshes/dungeon.fbx_Pillar2/: dungeon.fbx_Pillar2.fbx
assets/meshes/dungeon.fbx_Pillar3/: dungeon.fbx_Pillar3.fbx
assets/meshes/dungeon.fbx_Pillars/: dungeon.fbx_Pillars.fbx
assets/meshes/dungeon.fbx_Spares/: dungeon.fbx_Spares.fbx
assets/meshes/dungeon.fbx_Torches/: dungeon.fbx_Torches.fbx
assets/meshes/dungeon.fbx_Wall1/: dungeon.fbx_Wall1.fbx
assets/meshes/dungeon.fbx_Wall2/: dungeon.fbx_Wall2.fbx
assets/meshes/dungeon.fbx_Wall3/: dungeon.fbx_Wall3.fbx
assets/meshes/dungeon.fbx_Wall4/: dungeon.fbx_Wall4.fbx
assets/shaders/: basic.vert  basic_2d.vert  basic_light.frag  font.frag  grid.frag  grid.vert  imgui.frag  imgui.vert  mesh.vert  single_color.frag
blender/: text_export.blend  text_export.blend1
include/math/: mat4.h  math.h  transform.h  vec2.h  vec3.h  vec4.h
include/platform/: platform.h  types.h  user_input.h
src/: CMakeLists.txt  application.cpp  application.h  asset_import.h  gl_shader.cpp  gl_shader.h  types.h
src/application/: application.cpp  application.h  asset_import.cpp  assets.h  camera.h  gl_shader.cpp  gl_shader.h  logger.h  memory.cpp  memory_arena.cpp  memory_arena.h  player.h
src/engine/: array.h  asset_import.cpp  asset_import.h  asset_manager.cpp  asset_manager.h  assets.h  camera.h  cli.cpp  cli.h  command_parser.h  engine.cpp  engine.h  fixed_string.h  framebuffer.h  gl_shader.cpp  gl_shader.h  gl_vao2.cpp  gl_vao2.h  growable_list.h  growable_string.h  gui.cpp  gui.hpp  linked_list.h  list.h  logger.cpp  logger.h  material.h  memory.cpp  memory_arena.cpp  memory_arena.h  mesh.h  model.h  options.cpp  options.hpp  player.h  ray.cpp  ray.h  renderer.h  text_renderer.cpp  text_renderer.h
src/engine/allocators/: pool_allocator.h
src/engine/cli/: cli.cpp  cli.h  cli_app.h  echo.h  graphics.cpp  graphics.h  options.h
src/engine/gl/: gl_shader.cpp  gl_shader.h  gl_vao.cpp  gl_vao.h
src/math/: mat4.cpp  transform.cpp  vec3.cpp
tests/: CMakeLists.txt  array_test.cpp  cli_echo_test.cpp  command_parser_test.cpp  fixed_string_test.cpp  linked_list_test.cpp  memory_arena_test.cpp  util.h
